syntax = "proto3";
package calby_chat;
import "google/protobuf/timestamp.proto";  

service CalbyChat {
    rpc CreateGroup(GroupSettings) returns ( ResponseGroup );
    rpc SendMessage(Message) returns (ResponseMessage);
    rpc deleteMessage(MsgForDel) returns (ResponseMessage);
    rpc editMessage(MsgForEdit) returns (ResponseMessage);
}


// message ChannelSettings {}
// message PrivateSettings {}


message GroupSettings {
    string creator = 1;
    string displayed_name = 2;
    string short_name = 3;
    string chat_type = 4;
    string avatar = 5;
    string users = 6;
    bool open = 7;
    string description = 8;
}

message MsgForEdit {
    int64 chat_id = 1;
    string author = 2;
    int32 msgId = 3;
    // we just replace in our db old message for new, so we don't store deleted and old message which edited
    string msgForReplace = 4;
}

message MsgForDel {
    int64 chat_id = 1;
    string author = 2;
    int32 msgId = 3;
    string msgForDelete = 4;  
}


message Message{
    int64 chat_id = 1;
    string author = 2;
    string content = 3;
    int64 time = 4;
    string who_received = 5;
    string who_read = 6;
}

message ResponseGroup {
    bool status = 1;
}

message ResponseMessage {
    bool status = 1;
}
